--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -7,4 +7,6 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
+RUN npm install express --save && npm install mysql --save    
+
 EXPOSE 3000
