--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,7 @@ services:
     build:
       context: ./node
     container_name: app
-    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
-    command: node index.js
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh sh -c "npm install && node index.js"
     networks:
       - desafionginx
     volumes:
